# ChristmasDecorator

./: .gitignore  CMakeLists.txt  ChristmasDecorator.h  README.md  align.cpp  align.h  corners.cpp  corners.h  day_to_night.ipynb  daytonight.cpp  daytonight.h  decorate.cpp  decorate.h  facade2labels.ipynb  generate  generate_from_gan  lights.cpp  lights.h  windows.cpp  windows.h
data/: facade_to_align_3.xml  facade_to_align_template.xml
